# interaccion

./: CMakeLists.txt  package.xml
src/: dialogo.cpp  emocion_usuario.cpp  empaquetador.cpp  informacion_personal.cpp  multiplicador.cpp  posicion_usuario.cpp  reloj.cpp
srv/: multiply.srv  multiply.srv~
